--- a/.gitmodules
+++ b/.gitmodules
@@ -62,3 +62,7 @@
 	path = build/rpmbuild-docker/dep
 	url = https://github.com/golang/dep.git
 	branch = master
+[submodule "snmp_exporter"]
+	path = sources/snmp_exporter
+	url = https://github.com/shatteredsilicon/snmp_exporter
+	branch = ssm-1.x
