--- a/.gitmodules
+++ b/.gitmodules
@@ -68,4 +68,4 @@
 	branch = ssm-1.x
 [submodule "ssm-doc"]
 	path = ssm-doc
-	url = git@github.com:shatteredsilicon/ssm-doc.git
+	url = https://github.com/shatteredsilicon/ssm-doc
